<resources>
    <string name="app_name">Unter Uns</string>

    <!-- Menu -->

    <string name="title_menu">Willkommen in der Unter Uns App!</string>

    <string name="button_menu_start">Spiel Starten</string>
    <string name="button_menu_continue">Spiel Fortsetzen</string>
    <string name="button_menu_credits">Credits</string>

    <string name="button_cheat_continue">AB ZEITPUNKT STARTEN</string>
    <string name="button_cheat_qr">QR TESTER</string>

    <!-- Routes -->

    <string name="title_routes">Wählen Sie die Schwierigkeitsstufe.</string>

    <!-- Credits -->

    <string name="title_credits">Die Ersteller von dem Unter Uns Geocaching Erlebnis.</string>

    <!-- Back Dialog -->

    <string name="title_back">Achtung</string>
    <string name="label_back">Wollen Sie wirklich in das Hauptmenü zurückkehren?</string>
    <string name="button_back_yes">Hauptmenü</string>
    <string name="button_back_no">Nein</string>

    <!-- Cheat Dialog -->

    <string name="title_cheat">Adminmenü</string>
    <string name="label_cheat">Bitte geben Sie das Kennwort für das Adminmenü ein.</string>
    <string name="button_cheat_submit">OK</string>
    <string name="button_cheat_back">Zurück</string>

    <!-- Compass -->

    <string name="title_compass">Folgen Sie dem Kompass, um ans nächste Ziel zu gelangen.</string>

    <!-- QR -->

    <string name="title_qr_route">Scannen Sie den QR Code auf dem versteckten Behälter.</string>
    <string name="title_qr_continue">Scannen Sie einen QR Code, um dort anzufangen.</string>
    <string name="title_qr_test">QR Tester</string>
    <string name="title_qr_morse">Scannen Sie den entsprechenden QR Code, um eine Geheimnachricht anzuhören.</string>
    <string name="title_qr_rightwrong">Finden Sie den richtigen QR Code, um weiterzukommen.</string>

    <!-- Postcards -->

    <string name="title_postcards">Lösen Sie das Postkarten Rätsel, um weiterzukommen.</string>
    <string name="button_postcards_scan">QR Scannen</string>
    <string name="button_postcards_questions">Fragen Beantworten</string>
    <string name="title_postcardquestions">Beantworten Sie diese Fragen, um weiterzukommen!</string>
    <string name="button_postcardquestion_play">Frage Abspielen</string>
    <string name="button_postcardquestion_stop">Das Abspielen Abbrechen</string>
    <string name="button_postcardquestion_input">Eingeben</string>
    <string name="button_postcardquestion_reset">Rücksetzen</string>
    <string name="label_postcardquestion_answer">Ihre Antwort erscheint hier</string>
    <string name="button_postcardquestions_done">Fertig</string>

    <!-- Input -->

    <string name="title_inputquestion">Geben Sie die Antwort auf das Rätsel hier ein, um weiterzukommen.</string>
    <string name="field_inputquestion_answer">Antwort hier eingeben.</string>
    <string name="button_inputquestion_check">Antwort Prüfen</string>
    <string name="label_inputquestion_wrong">Falsche Antwort</string>

    <!-- Saves -->

    <string name="key_preferences">net.opisek.unteruns.progress</string>

    <!-- Vote -->

    <string name="title_vote_riddle">Wählen sie die beiden Mörder, um weiterzukommen.</string>
    <string name="button_vote_red">Rot</string>
    <string name="button_vote_white">Weiß</string>
    <string name="button_vote_pink">Pink</string>
    <string name="button_vote_confirm">Weiter</string>

    <string name="title_vote_readstory">Lesen sie die Geschichte zuende.</string>

    <string name="title_vote_result">Danke fürs Spielen!</string>
    <string name="label_vote_right">Hurray :D</string>
    <string name="label_vote_wrong">Schade Marmelade</string>
    <string name="button_vote_menu">Zum Hauptmenü</string>

    <!-- Lorem Ipsum -->

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed imperdiet nibh eget mi vestibulum convallis. In vehicula lacus at enim dapibus varius vitae at nisl. Mauris id elementum tortor. Nulla vel tristique purus. Proin interdum ultrices nibh, vitae efficitur tortor mollis vitae. Vestibulum a fermentum mi, vitae venenatis mi. Aenean consectetur rutrum lorem. Praesent urna ipsum, varius a dapibus ac, faucibus pretium neque. Nulla ullamcorper sollicitudin metus. Phasellus et eros erat. Donec ac volutpat risus.

Nullam bibendum arcu quis aliquam congue. Donec ullamcorper tincidunt sapien sit amet cursus. Integer semper nunc vitae euismod hendrerit. Nullam vel nisl vel magna ullamcorper pulvinar sit amet tristique enim. Integer vel risus id odio faucibus congue. Nullam sed mi est. Maecenas consequat turpis ut nisi egestas, sed porta metus cursus.

Vestibulum vitae lacus ex. Maecenas condimentum est id fringilla hendrerit. Praesent id pretium est. Aliquam in gravida est. Mauris sit amet luctus ante. Nullam a venenatis sem. Curabitur vitae purus pretium, hendrerit velit in, efficitur metus.

Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean at malesuada turpis. Mauris id rutrum nisl, quis malesuada enim. Nulla facilisi. Nulla eget ultrices elit, et facilisis ipsum. Donec ac leo sed elit eleifend pharetra vel id nisl. Cras vehicula consequat velit eu luctus. Sed posuere arcu nisi, eu porttitor dui venenatis in. Nulla facilisi. Nam viverra neque vitae mi consectetur sagittis.</string>

</resources>
