<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/stars">
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:text="@string/title_postcards"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="25sp"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorForegroundLight"
        android:padding="5dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="3"
        android:orientation="vertical"
        android:paddingTop="100dp"
        android:paddingBottom="100dp">
        <Button
            android:layout_width="fill_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            android:layout_marginBottom="10dp"

            android:id="@+id/button_postcards_scan"

            android:text="@string/button_postcards_scan"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="25sp"
            android:padding="5dp"
            android:textColor="@color/colorForegroundLight"
            android:background="@color/colorBackgroundDark"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            android:layout_marginBottom="10dp"

            android:id="@+id/button_postcards_questions"

            android:text="@string/button_postcards_questions"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="25sp"
            android:padding="5dp"
            android:textColor="@color/colorForegroundLight"
            android:background="@color/colorBackgroundDark"/>
    </LinearLayout>
</LinearLayout>